# simpleCmake

./: CMakeCache.txt  CMakeLists.txt  Makefile  animalSim  cmake_install.cmake  main.cpp  main1.cpp  without.opencv.CMakeLists.txt
include/: funcs.h  horse.h  mule.h
include/animals/: mule.h
include/cvplotter/: cvplotter.h
lib/: libOpenThreads.so.3.3.1  libosg.so.160  libosgAnimation.so.160  libosgAnimation.so.3.6.4  libosgDB.so.160  libosgDB.so.3.6.4  libosgFX.so.160  libosgFX.so.3.6.4  libosgGA.so.160  libosgGA.so.3.6.4  libosgManipulator.so.160  libosgManipulator.so.3.6.4  libosgParticle.so.160  libosgParticle.so.3.6.4  libosgPresentation.so.160  libosgPresentation.so.3.6.4  libosgShadow.so.160  libosgShadow.so.3.6.4  libosgSim.so.160  libosgSim.so.3.6.4  libosgTerrain.so.160  libosgTerrain.so.3.6.4  libosgText.so.160  libosgText.so.3.6.4  libosgUI.so.160  libosgUI.so.3.6.4  libosgUtil.so.160  libosgUtil.so.3.6.4  libosgViewer.so.160  libosgViewer.so.3.6.4  libosgVolume.so.160  libosgVolume.so.3.6.4  libosgWidget.so.160  libosgWidget.so.3.6.4
src/: funcs.cpp  horse.cpp  mule.cpp
src/animals/: funcs.cpp  horse.cpp  mule.cpp
